# nutty.cash

./: .env  .env.example  .gitignore  AGENTS.md  Cargo.toml  README.md  SKILL.md  flake.nix  result
nix/: package.nix
nix/modules/: nutty.nix
src/: api.rs  app.rs  bip21.rs  cashu.rs  lib.rs  main.rs  types.rs
src/components/: bip353_box.rs  button.rs  header.rs  input.rs  mod.rs
src/pages/: home.rs  mod.rs  new_address.rs  new_paycode.rs  search.rs  success.rs
src/server/: api.rs  cloudflare.rs  db.rs  mod.rs  names.rs  nut24.rs  state.rs
style/: main.css
